# envuse-rust

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  release-please-config.json  rust-toolchain.toml
.github/workflows/: release-please.yml  rust-publish.yaml  rust-review.yaml
src/: envuse.rs  lib.rs  syntax_error.rs
src/envuse/: create_program.rs  display_program_error.rs  evaluate.rs  evaluate_options.rs  mod.rs  parse_options.rs  program.rs  to_custom_transformers.rs  to_envs.rs  to_optional_string.rs
src/errors/: mod.rs  parser_error.rs  program_error.rs  to_program_error.rs
src/parser/: ast.rs  error_kind.rs  iter_parsers.rs  kind.rs  mod.rs  node.rs  node_kind.rs  span.rs  tokenizer.rs
src/transformers/: mod.rs  parser.rs  trait_transformer.rs  transformer_list.rs  value_types.rs
src/utils/: display_syntax.rs  mod.rs
tests/: ast_test.rs  envuse_test.rs  parser_test.rs  program_error_test.rs  tokenizer_test.rs
tests/snapshots/: ast_test__ast_test__parse_comment.snap  ast_test__ast_test__parse_comment_block.snap  ast_test__ast_test__parse_comment_multiple_block.snap  ast_test__ast_test__parse_comment_multiple_block_2.snap  ast_test__ast_test__parse_comment_multiple_lines.snap  ast_test__ast_test__parse_executable.snap  ast_test__ast_test__parse_sample_document.snap  ast_test__ast_test__parse_sample_document_with_type_configurable-2.snap  ast_test__ast_test__parse_sample_document_with_type_configurable.snap  ast_test__ast_test__parse_sample_document_with_type_configurable_binary_option-2.snap  ast_test__ast_test__parse_sample_document_with_type_configurable_binary_option.snap  ast_test__ast_test__parse_sample_document_with_type_configurable_multiline.snap  ast_test__ast_test__parse_unexpected_token.snap  ast_test__ast_test__parse_variable.snap  ast_test__ast_test__parse_variable_with_default_value.snap  ast_test__ast_test__parse_variable_with_default_value_number.snap  ast_test__ast_test__parse_variables_as_nullable.snap  ast_test__ast_test__parse_variables_name.snap  ast_test__ast_test__parse_variables_with_comment.snap  ast_test__ast_test__parse_variables_with_type.snap  (+35 more)
(+14 files in other folders)
