[package]
name = "envuse-parser"
version = "0.2.0-beta.5"
edition = "2021"
description = "a parser to envuse file"
license = "MIT"
authors = ["Jonathan Delgado <hi@jon.soy> (http://jon.soy)"]
homepage = "https://github.com/JonDotsoy/envuse-rust"
repository = "https://github.com/JonDotsoy/envuse-rust"

[lib]
doc = true
test = true

[features]
with-js = []
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
js-sys = "0.3.60"
serde = { version = "1", features = ["derive"] }
wasm-bindgen = "0.2.83"

[dev-dependencies]
colors = "0.0.1"
insta = { version = "1.21.0", features = ["yaml", "serde"] }
